WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132469
[MSE][Mac] AVAssetTrack returns incorrect track size
https://bugs.webkit.org/show_bug.cgi?id=132469
Summary
[MSE][Mac] AVAssetTrack returns incorrect track size
Jer Noble
Reported
2014-05-02 09:47:56 PDT
[MSE][Mac] AVAssetTrack returns incorrect track size
Attachments
Patch
(5.29 KB, patch)
2014-05-02 10:43 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-05-02 10:43:24 PDT
Created
attachment 230672
[details]
Patch
Brent Fulgham
Comment 2
2014-05-02 16:01:40 PDT
Comment on
attachment 230672
[details]
Patch Nice! r=me.
WebKit Commit Bot
Comment 3
2014-05-02 18:10:17 PDT
Comment on
attachment 230672
[details]
Patch Clearing flags on attachment: 230672 Committed
r168214
: <
http://trac.webkit.org/changeset/168214
>
WebKit Commit Bot
Comment 4
2014-05-02 18:10:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug