[MSE][Mac] AVAssetTrack returns incorrect track size https://bugs.webkit.org/show_bug.cgi?id=132469

Reviewed by Brent Fulgham.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h:
* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::didParseStreamDataAsAsset):  Remove the sizeChanged() notification.
(WebCore::SourceBufferPrivateAVFObjC::processCodedFrame): Cache the last parsed video frame size.
(WebCore::SourceBufferPrivateAVFObjC::naturalSize): Return the cached value.


Canonical link: https://commits.webkit.org/150539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168214 268f45cc-cd09-0410-ab3c-d52691b4dbfc